kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kino-backend-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.unruffled-nightingale.com
      secretName: kino-backend-tls
  rules:
    - host: api.unruffled-nightingale.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kino-backend
              servicePort: 80
